--- a/index.html
+++ b/index.html
@@ -6,7 +6,53 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-<link rel="stylesheet" href="style.php/main.scss" />
+<style>/* compiled by scssphp v0.7.5 on Tue, 06 Mar 2018 12:08:55 +0100 (0.1195s) */
+
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto');
+body {
+  background-color: #fff;
+  color: #000; }
+  h3 {
+    font-size: 22px;
+    margin-bottom: 0; }
+
+hr {
+  border-color: rgba(0, 0, 0, 0.5);
+  margin: 15px -15px 25px -15px; }
+
+h4 {
+  margin-top: 15px;
+  border-left: 4px solid #000;
+  padding: 0 0 0 15px;
+  line-height: 100%; }
+
+a {
+  color: inherit;
+  text-decoration: underline;
+  text-decoration-color: #ccc; }
+  a:hover {
+    color: inherit;
+    text-decoration-color: #000; }
+
+.cv {
+  margin-top: -60px; }
+
+.padded {
+  margin: 0 30px; }
+
+.comp table {
+  margin: 10px 0 30px 0; }
+  .comp table th, .comp table td {
+    padding-left: 15px; }
+  .comp table th {
+    vertical-align: top;
+    font-size: 65%;
+    line-height: 24px; }
+
+@media print {
+  a {
+    text-decoration: none !important; } }
+</style>
 	</head>
 	<body>
 		<br/>
