--- a/index.html
+++ b/index.html
@@ -293,12 +293,20 @@ a {
 								PostgreSQL, 							</a>
 													<a class="tag"  href="https://bower.io/" target="techno" >
 								Bower, 							</a>
-													<a class="tag"  href="https://git-scm.com/" target="techno" >
-								<span class='text-nowrap'><i class='fab fa-git fa-fw'></i> GIT</span>, 							</a>
-													<a class="tag"  href="https://fr.wikipedia.org/wiki/Make" target="techno" >
-								make, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Rsync" target="techno" >
 								rsync							</a>
+											</td>
+				</tr>
+								<tr>
+					<th class="text-right text-nowrap">
+						<i class="fa fa-star"></i>
+<i class="fa fa-star"></i>
+					</th>
+					<td>
+																			<a class="tag"  href="https://git-scm.com/" target="techno" >
+								<span class='text-nowrap'><i class='fab fa-git fa-fw'></i> GIT</span>, 							</a>
+													<a class="tag"  href="https://fr.wikipedia.org/wiki/Make" target="techno" >
+								make							</a>
 											</td>
 				</tr>
 						</tbody>
