OK c'est juste des petites MAJ

--- a/index.html
+++ b/index.html
@@ -331,7 +331,9 @@ a {
 													<a class="tag"  href="https://inkscape.org/fr/" target="techno" >
 								Inkscape, 							</a>
 													<a class="tag"  href="https://www.reaper.fm/" target="techno" >
-								Reaper							</a>
+								Reaper, 							</a>
+													<a class="tag" >
+								Sublime Text							</a>
 											</td>
 				</tr>
 								<tr>
