--- a/index.html
+++ b/index.html
@@ -75,14 +75,12 @@ a {
 	<div>
 		<i class="fas fa-fw fa-envelope"></i> <a href="mailto:le.neko@gmail.com">le.neko@gmail.com</a>
 	</div>
-	<div>
-		<i class="fas fa-phone fa-fw"></i> 07 83 53 44 30
-	</div>
+
 </address>
 
 		</div>
 		<div class="col text-right">
-			<h5>Développeur WEB fullstack<br/>PHP/MySQL</h5>
+			<h5>Développeur WEB <br/>PHP/MySQL</h5>
 
 <div>
 	<i class="fa fa-clock"></i>
@@ -214,8 +212,6 @@ a {
 					<td>
 																			<a class="tag"  href="https://getbootstrap.com/" target="techno" >
 								Bootstrap, 							</a>
-													<a class="tag"  href="https://jquery.com/" target="techno" >
-								Jquery, 							</a>
 													<a class="tag"  href="https://www.tumblr.com/docs/en/api/v2" target="techno" >
 								Tumblr							</a>
 											</td>
@@ -227,7 +223,9 @@ a {
 <i class="fa fa-star"></i>
 					</th>
 					<td>
-																			<a class="tag"  href="https://www.mandrill.com/" target="techno" >
+																			<a class="tag"  href="https://jquery.com/" target="techno" >
+								Jquery, 							</a>
+													<a class="tag"  href="https://www.mandrill.com/" target="techno" >
 								Mailchimp, 							</a>
 													<a class="tag"  href="https://www.monetico-paiement.fr/" target="techno" >
 								Monetico, 							</a>
@@ -361,7 +359,7 @@ a {
 
 		<h4>
 			<small>2008 &mdash; 2018</small><br/>
-			Développeur WEB fullstack <br/><small>@Hurleur média</small>
+			Développeur WEB <br/><small>@Hurleur média</small>
 		</h4>
 		<br/>
 		<div class="row padded">
@@ -397,10 +395,10 @@ a {
 						<b>Grim Edif</b>
 						<a target="site" href="http://www.grimedif.fr">www.grimedif.fr</a>
 					</li>
-					<li>
+					<!-- <li>
 						<b>Fondation Apicil</b>
 						<a target="site" href="http://www.fondation-apicil.org">www.fondation-apicil.org</a>
-					</li>
+					</li> -->
 					<li>
 						<a target="site" href="http://www.academiedeversailles.com">www.academiedeversailles.com</a>
 					</li>
