--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@ a {
 <div>
 	<i class="fa fa-map"></i>
 	<b>Mobilité géographique</b><br/>
-	Région de Lyon
+	Région de Lyon<br/>
+	Je n'ai pas le permis
+	(<i class="fas fa-bicycle"></i> +
+	<i class="fas fa-train"></i>)
+
 </div>
 		</div>
 	</div>
