--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ a {
 </style>
 	</head>
 	<body>
-		<br/>
+		<br class="noprint"/>
 <div class="container">
 	<div class="row">
 		<div class="col">
@@ -112,7 +112,12 @@ a {
 		<div class="row">
 			<div class="col">
 				<h3 class="text-uppercase">Formation</h3>
-				<h4><small>Autodidacte</small></h4>
+				<h4>
+					<small>
+						Autodidacte
+						<em>(niveau BAC)</em>
+					</small>
+				</h4>
 			</div>
 		</div>
 		<hr/>
