--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@ a {
 	<i class="fa fa-map"></i>
 	<b>Mobilité géographique</b><br/>
 	Région de Lyon<br/>
-	Je n'ai pas le permis
+	<small><em>Je n'ai pas le permis</em>
 	(<i class="fas fa-bicycle"></i> +
 	<i class="fas fa-train"></i>)
+	</small>
 
 </div>
 		</div>
@@ -115,7 +116,7 @@ a {
 				<h4>
 					<small>
 						Autodidacte
-						<em>(niveau BAC)</em>
+						<small><em>(niveau BAC)</em></small>
 					</small>
 				</h4>
 			</div>
