--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 	<html lang="en">
 	<title></title>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118003449-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-118003449-1');
+		</script>
+
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-<style>/* compiled by scssphp v0.7.5 on Tue, 06 Mar 2018 12:08:55 +0100 (0.1195s) */
+<style>/* compiled by scssphp v0.7.5 on Sun, 22 Apr 2018 11:28:33 +0200 (0.0526s) */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto');
 body {
@@ -51,7 +61,10 @@ a {
 
 @media print {
   a {
-    text-decoration: none !important; } }
+    text-decoration: none !important; }
+
+  .noprint {
+    display: none; } }
 </style>
 	</head>
 	<body>
@@ -158,8 +171,8 @@ a {
 <i class="fa fa-star"></i>
 					</th>
 					<td>
-																			<a class="tag" >
-								<span class='text-nowrap'><i class='fas fa-database fa-fw'></i> SQL</span>, 							</a>
+																			<a class="tag"  href="https://fr.wikipedia.org/wiki/JavaScript" target="techno" >
+								<span class='text-nowrap'><i class='fab fa-js fa-fw'></i> SQL</span>, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/HTML5" target="techno" >
 								<span class='text-nowrap'><i class='fab fa-html5 fa-fw'></i> HTML5</span>, 							</a>
 													<a class="tag"  href="https://www.json.org/json-fr.html" target="techno" >
@@ -179,8 +192,8 @@ a {
 <i class="fa fa-star"></i>
 					</th>
 					<td>
-																			<a class="tag"  href="https://fr.wikipedia.org/wiki/JavaScript" target="techno" >
-								<span class='text-nowrap'><i class='fab fa-js fa-fw'></i> Javascript</span>, 							</a>
+																			<a class="tag" >
+								<span class='text-nowrap'><i class='fas fa-database fa-fw'></i> Javascript</span>, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Bourne-Again_shell" target="techno" >
 								<span class='text-nowrap'><i class='fas fa-terminal fa-fw'></i> SHELL</span>, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Programmation_orient%C3%A9e_objet" target="techno" >
@@ -271,8 +284,8 @@ a {
 								Cron, 							</a>
 													<a class="tag"  href="https://bower.io/" target="techno" >
 								Bower, 							</a>
-													<a class="tag"  href="https://fr.wikipedia.org/wiki/Rsync" target="techno" >
-								rsync							</a>
+													<a class="tag"  href="https://git-scm.com/" target="techno" >
+								<span class='text-nowrap'><i class='fab fa-git fa-fw'></i> rsync</span>							</a>
 											</td>
 				</tr>
 						</tbody>
@@ -298,7 +311,7 @@ a {
 								Inkscape, 							</a>
 													<a class="tag"  href="https://www.reaper.fm/" target="techno" >
 								Reaper, 							</a>
-													<a class="tag" >
+													<a class="tag"  href="https://www.adobe.com" target="techno" >
 								Sublime Text							</a>
 											</td>
 				</tr>
@@ -313,7 +326,7 @@ a {
 								<span class='text-nowrap'><i class='fab fa-apple fa-fw'></i> OSX</span>, 							</a>
 													<a class="tag" >
 								<span class='text-nowrap'><i class='fab fa-windows fa-fw'></i> Windows</span>, 							</a>
-													<a class="tag"  href="https://www.adobe.com" target="techno" >
+													<a class="tag" >
 								Suite Adobe							</a>
 											</td>
 				</tr>
