--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@ a {
 								<span class='text-nowrap'><i class='fas fa-database fa-fw'></i> Javascript</span>, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Bourne-Again_shell" target="techno" >
 								<span class='text-nowrap'><i class='fas fa-terminal fa-fw'></i> SHELL</span>, 							</a>
+													<a class="tag"  href="https://www.java.com/fr/" target="techno" >
+								PYTHON, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Programmation_orient%C3%A9e_objet" target="techno" >
 								POO, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Markdown" target="techno" >
@@ -284,8 +286,8 @@ a {
 								Cron, 							</a>
 													<a class="tag"  href="https://bower.io/" target="techno" >
 								Bower, 							</a>
-													<a class="tag"  href="https://git-scm.com/" target="techno" >
-								<span class='text-nowrap'><i class='fab fa-git fa-fw'></i> rsync</span>							</a>
+													<a class="tag"  href="https://fr.wikipedia.org/wiki/Rsync" target="techno" >
+								rsync							</a>
 											</td>
 				</tr>
 						</tbody>
@@ -312,7 +314,9 @@ a {
 													<a class="tag"  href="https://www.reaper.fm/" target="techno" >
 								Reaper, 							</a>
 													<a class="tag"  href="https://www.adobe.com" target="techno" >
-								Sublime Text							</a>
+								Sublime Text, 							</a>
+													<a class="tag" >
+								VS Code							</a>
 											</td>
 				</tr>
 								<tr>
