--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-<style>/* compiled by scssphp v0.7.5 on Sun, 22 Apr 2018 11:28:33 +0200 (0.0526s) */
+<style>/* compiled by scssphp v0.7.5 on Mon, 11 Jun 2018 12:05:50 +0200 (0.0606s) */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto');
 body {
@@ -65,6 +65,10 @@ a {
 
   .noprint {
     display: none; } }
+
+@media screen {
+  .noscreen {
+    display: none; } }
 </style>
 	</head>
 	<body>
@@ -89,11 +93,22 @@ a {
 		<i class="fas fa-fw fa-envelope"></i> <a href="mailto:le.neko@gmail.com">le.neko@gmail.com</a>
 	</div>
 
+		<div>
+			<div>
+				<i class="fab fa-fw fa-github-alt"></i> <small><a href="https://github.com/leNEKO">https://github.com/leNEKO</a></small>
+			</div>
+			<div class="noscreen-">
+				<br/>
+				<small><a href="https://leneko.github.io/">https://leneko.github.io/</a> <i class="fas fa-arrow-left"></i> ce CV à jour</small>
+			</div>
+		</div>
+	</small>
+
 </address>
 
 		</div>
 		<div class="col text-right">
-			<h5>Développeur WEB <br/>PHP/MySQL</h5>
+			<h5>Développeur WEB <br/><small>PHP/MySQL</small></h5>
 
 <div>
 	<i class="fa fa-clock"></i>
@@ -123,8 +138,9 @@ a {
 	<br/>
 
 	<div class="cv">
+
 		<div class="row">
-			<div class="col">
+			<div class="col-4">
 				<h3 class="text-uppercase">Formation</h3>
 				<h4>
 					<small>
@@ -133,7 +149,16 @@ a {
 					</small>
 				</h4>
 			</div>
+			<div class="col-6">
+				<h3 class="text-uppercase">Langues</h3>
+				<h4>
+					<small>
+						Français, Anglais <small><em>(niveau B2)</em></small>
+					</small>
+				</h4>
+			</div>
 		</div>
+
 		<hr/>
 		<h3 class="text-uppercase">
 			<a href="https://docs.google.com/spreadsheets/d/10NMp5EHkIQexaXeaxUbqfIkLK0pt6yrQPe9IZwujdhQ/edit#gid=0" target="comp">
@@ -172,7 +197,7 @@ a {
 					</th>
 					<td>
 																			<a class="tag"  href="https://fr.wikipedia.org/wiki/JavaScript" target="techno" >
-								<span class='text-nowrap'><i class='fab fa-js fa-fw'></i> SQL</span>, 							</a>
+								<span class='text-nowrap'><i class='fas fa-database fa-fw'></i> SQL</span>, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/HTML5" target="techno" >
 								<span class='text-nowrap'><i class='fab fa-html5 fa-fw'></i> HTML5</span>, 							</a>
 													<a class="tag"  href="https://www.json.org/json-fr.html" target="techno" >
@@ -182,7 +207,9 @@ a {
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Scalable_Vector_Graphics" target="techno" >
 								SVG, 							</a>
 													<a class="tag"  href="https://mustache.github.io/" target="techno" >
-								MUSTACHE							</a>
+								MUSTACHE, 							</a>
+													<a class="tag"  href="https://github.com/leNEKO/exercism-solution" target="techno" >
+								Algorithmique							</a>
 											</td>
 				</tr>
 								<tr>
@@ -193,15 +220,13 @@ a {
 					</th>
 					<td>
 																			<a class="tag" >
-								<span class='text-nowrap'><i class='fas fa-database fa-fw'></i> Javascript</span>, 							</a>
-													<a class="tag"  href="https://fr.wikipedia.org/wiki/Bourne-Again_shell" target="techno" >
-								<span class='text-nowrap'><i class='fas fa-terminal fa-fw'></i> SHELL</span>, 							</a>
-													<a class="tag"  href="https://www.java.com/fr/" target="techno" >
-								PYTHON, 							</a>
-													<a class="tag"  href="https://fr.wikipedia.org/wiki/Programmation_orient%C3%A9e_objet" target="techno" >
-								POO, 							</a>
+								<span class='text-nowrap'><i class='fab fa-js fa-fw'></i> Javascript</span>, 							</a>
+													<a class="tag"  href="https://www.python.org/" target="techno" >
+								<span class='text-nowrap'><i class='fab fa-python fa-fw'></i> PYTHON</span>, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Markdown" target="techno" >
-								Markdown							</a>
+								Markdown, 							</a>
+													<a class="tag"  href="https://fr.wikipedia.org/wiki/Programmation_orient%C3%A9e_objet" target="techno" >
+								POO							</a>
 											</td>
 				</tr>
 						</tbody>
@@ -287,7 +312,9 @@ a {
 													<a class="tag"  href="https://bower.io/" target="techno" >
 								Bower, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Rsync" target="techno" >
-								rsync							</a>
+								rsync, 							</a>
+													<a class="tag"  href="https://git-scm.com/" target="techno" >
+								<span class='text-nowrap'><i class='fab fa-git fa-fw'></i> GIT</span>							</a>
 											</td>
 				</tr>
 						</tbody>
