--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ a {
 			<div>
 				<i class="fab fa-fw fa-github-alt"></i> <small><a href="https://github.com/leNEKO">https://github.com/leNEKO</a></small>
 			</div>
-			<div class="noscreen-">
+			<div class="noscreen">
 				<br/>
 				<small><a href="https://leneko.github.io/">https://leneko.github.io/</a> <i class="fas fa-arrow-left"></i> ce CV à jour</small>
 			</div>
