--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-<style>/* compiled by scssphp v0.7.5 on Mon, 11 Jun 2018 12:05:50 +0200 (0.0606s) */
+<style>/* compiled by scssphp v0.7.6 on Mon, 11 Jun 2018 11:12:14 +0000 (0.0307s) */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto');
 body {
@@ -44,7 +44,7 @@ a {
     color: inherit;
     text-decoration-color: #000; }
 
-.cv {
+.pullup {
   margin-top: -60px; }
 
 .padded {
@@ -75,7 +75,7 @@ a {
 		<br class="noprint"/>
 <div class="container">
 	<div class="row">
-		<div class="col">
+		<div class="col-xs-12 col-md-6">
 			<address>
 	<h5>
 		Nicolas Masson
@@ -107,7 +107,34 @@ a {
 </address>
 
 		</div>
-		<div class="col text-right">
+		<div class="col-xs-12 col-md-6 d-xs-block d-md-none">
+			<br/>
+			<h5>Développeur WEB <br/><small>PHP/MySQL</small></h5>
+
+<div>
+	<i class="fa fa-clock"></i>
+	<b>Disponibilité</b><br/>
+	Immédiate
+</div>
+
+<div>
+	<i class="fas fa-hourglass-half"></i>
+	<b>Années d'expériences</b><br/>
+	15 ans
+</div>
+
+<div>
+	<i class="fa fa-map"></i>
+	<b>Mobilité géographique</b><br/>
+	Région de Lyon<br/>
+	<small><em>Je n'ai pas le permis</em>
+	(<i class="fas fa-bicycle"></i> +
+	<i class="fas fa-train"></i>)
+	</small>
+
+</div>
+		</div>
+		<div class="col-md-6 text-right d-none d-md-block">
 			<h5>Développeur WEB <br/><small>PHP/MySQL</small></h5>
 
 <div>
@@ -138,9 +165,9 @@ a {
 	<br/>
 
 	<div class="cv">
-
+		<hr class="d-md-none"/>
 		<div class="row">
-			<div class="col-4">
+			<div class="col-xs-6 col-md-4">
 				<h3 class="text-uppercase">Formation</h3>
 				<h4>
 					<small>
@@ -149,7 +176,8 @@ a {
 					</small>
 				</h4>
 			</div>
-			<div class="col-6">
+			<div class="col-xs-6 col-md-8">
+				<br class="d-md-none"/>
 				<h3 class="text-uppercase">Langues</h3>
 				<h4>
 					<small>
@@ -158,7 +186,7 @@ a {
 				</h4>
 			</div>
 		</div>
-
+		<br class="d-md-none"/>
 		<hr/>
 		<h3 class="text-uppercase">
 			<a href="https://docs.google.com/spreadsheets/d/10NMp5EHkIQexaXeaxUbqfIkLK0pt6yrQPe9IZwujdhQ/edit#gid=0" target="comp">
@@ -166,7 +194,7 @@ a {
 			</a>
 		</h3>
 		<br/>
-		<div class="row comp padded">
+		<div class="row comp px-md-2">
 	<div class="col col-sm-6">
 			<h5>
 			<i class="fa fa-code fa-fw"></i>
@@ -374,7 +402,7 @@ a {
 			Développeur WEB <br/><small>@Hurleur média</small>
 		</h4>
 		<br/>
-		<div class="row padded">
+		<div class="row px-md-2">
 			<div class="col col-sm-6">
 				<h5>
 					<i class="fa fa-shopping-cart fa-fw"></i>
@@ -467,7 +495,7 @@ a {
 
 <br/>
 		<script src="//code.jquery.com/jquery-3.3.0.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
 <script src="//use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
