--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-<style>/* compiled by scssphp v0.7.6 on Mon, 11 Jun 2018 11:12:14 +0000 (0.0307s) */
+<style>/* compiled by scssphp v0.7.6 on Mon, 11 Jun 2018 11:19:14 +0000 (0.0168s) */
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans|Lato');
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Lato"; }
+
 body {
   background-color: #fff;
   color: #000; }
@@ -43,9 +46,6 @@ a {
   a:hover {
     color: inherit;
     text-decoration-color: #000; }
-
-.pullup {
-  margin-top: -60px; }
 
 .padded {
   margin: 0 30px; }
@@ -420,7 +420,6 @@ a {
 						<b>Presses universitaires de Lyon</b>
 						<a target="site" href="http://presses.univ-lyon2.fr">www.presses.univ-lyon2.fr</a> …
 					</li>
-
 				</ul>
 				<br/>
 			</div>
@@ -444,6 +443,7 @@ a {
 					</li>
 					<li><a target="site" href="http://gerarduferas.com">www.gerarduferas.com</a> …</li>
 				</ul>
+				<br class="d-xs-block d-md-none"/>
 			</div>
 
 			<div class="col-xs-12 col-sm-6">
@@ -457,6 +457,7 @@ a {
 					<li><b>Monitoring</b> : Munin</li>
 					<li><b>Backups</b> : Automysql, Rsync, Cron, Unison …</li>
 				</ul>
+				<br class="d-xs-block d-md-none"/>
 			</div>
 
 			<div class="col-xs-12 col-sm-6">
@@ -469,6 +470,7 @@ a {
 					<li>Logo, Charte graphique</li>
 					<li>Prépresse : PAO, flyers, affiches …</li>
 				</ul>
+				<br class="d-xs-block d-md-none"/>
 			</div>
 		</div>
 
