--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@ a {
 					<td>
 																			<a class="tag"  href="https://fr.wikipedia.org/wiki/JavaScript" target="techno" >
 								<span class='text-nowrap'><i class='fas fa-database fa-fw'></i> SQL</span>, 							</a>
+													<a class="tag"  href="https://www.python.org/" target="techno" >
+								<span class='text-nowrap'><i class='fab fa-python fa-fw'></i> PYTHON</span>, 							</a>
+													<a class="tag"  href="https://fr.wikipedia.org/wiki/Bourne-Again_shell" target="techno" >
+								<span class='text-nowrap'><i class='fas fa-terminal fa-fw'></i> SHELL</span>, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/HTML5" target="techno" >
 								<span class='text-nowrap'><i class='fab fa-html5 fa-fw'></i> HTML5</span>, 							</a>
 													<a class="tag"  href="https://www.json.org/json-fr.html" target="techno" >
@@ -249,8 +253,6 @@ a {
 					<td>
 																			<a class="tag" >
 								<span class='text-nowrap'><i class='fab fa-js fa-fw'></i> Javascript</span>, 							</a>
-													<a class="tag"  href="https://www.python.org/" target="techno" >
-								<span class='text-nowrap'><i class='fab fa-python fa-fw'></i> PYTHON</span>, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Markdown" target="techno" >
 								Markdown, 							</a>
 													<a class="tag"  href="https://fr.wikipedia.org/wiki/Programmation_orient%C3%A9e_objet" target="techno" >
@@ -488,7 +490,7 @@ a {
 					applications interactives,
 				</li>
 				<li>
-					animations algorythmiques, art génératif
+					animations algorithmiques, art génératif
 				</li>
 			</ul>
 		</div>
